a few additions to the manuscript

--- a/documents/GProtation.bib
+++ b/documents/GProtation.bib
@@ -897,13 +897,13 @@ archivePrefix = "arXiv",
 }
 
 @ARTICLE{Corner,
-      author        = "Dan Foreman-Mackey and Adrian Price-Whelan and Geoffrey
-                       Ryan and others",
-      title         = "{A citable release}",
-      month         = "Jun",
-      year          = "2014",
-      doi           = "{10.5281/zenodo.10598}",
-      url           = "{http://dx.doi.org/10.5281/zenodo.10598}",
+    Author = {Daniel Foreman-Mackey},
+    Doi = {10.21105/joss.00024},
+    Title = {corner.py: Scatterplot matrices in Python},
+    Journal = {The Journal of Open Source Software},
+    Year = 2016,
+    Volume = 24,
+    Url = {http://dx.doi.org/10.5281/zenodo.45906}
 }
 
 @ARTICLE{Appourchaux2012,
@@ -2883,4 +2883,47 @@ archivePrefix = "arXiv",
     title = {kombine: a kernel-density-based, embarrassingly parallel ensemble sampler},
      year = 2017,
      note = "in prep"
+}
+
+% Added by DFM:
+@ARTICLE{Dawson2014,
+   author = {{Dawson}, R.~I. and {Johnson}, J.~A. and {Fabrycky}, D.~C. and
+	{Foreman-Mackey}, D. and {Murray-Clay}, R.~A. and {Buchhave}, L.~A. and
+	{Cargile}, P.~A. and {Clubb}, K.~I. and {Fulton}, B.~J. and
+	{Hebb}, L. and {Howard}, A.~W. and {Huber}, D. and {Shporer}, A. and
+	{Valenti}, J.~A.},
+    title = "{Large Eccentricity, Low Mutual Inclination: The Three-dimensional Architecture of a Hierarchical System of Giant Planets}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1405.5229},
+ primaryClass = "astro-ph.EP",
+ keywords = {planetary systems },
+     year = 2014,
+    month = aug,
+   volume = 791,
+      eid = {89},
+    pages = {89},
+      doi = {10.1088/0004-637X/791/2/89},
+   adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...791...89D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Barclay2015,
+   author = {{Barclay}, T. and {Endl}, M. and {Huber}, D. and {Foreman-Mackey}, D. and
+	{Cochran}, W.~D. and {MacQueen}, P.~J. and {Rowe}, J.~F. and
+	{Quintana}, E.~V.},
+    title = "{Radial Velocity Observations and Light Curve Noise Modeling Confirm that Kepler-91b is a Giant Planet Orbiting a Giant Star}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1408.3149},
+ primaryClass = "astro-ph.EP",
+ keywords = {methods: data analysis, methods: statistical, planetary systems, stars: individual: Kepler-91 KIC 8219268 KOI-2133, techniques: photometric, techniques: radial velocities},
+     year = 2015,
+    month = feb,
+   volume = 800,
+      eid = {46},
+    pages = {46},
+      doi = {10.1088/0004-637X/800/1/46},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...800...46B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
