--- a/documents/ms.tex
+++ b/documents/ms.tex
@@ -11,7 +11,8 @@
 
 \newcommand{\columbia}{1}
 \newcommand{\oxford}{3}
-\newcommand{\uw}{4}
+\newcommand{\sagan}{4}
+\newcommand{\uw}{5}
 \newcommand{\princeton}{2}
 \newcommand{\naigrain}{333}
 \newcommand{\nmcquillan}{100}
@@ -45,6 +46,8 @@
 \newcommand{\pgramRMS}{0.98}
 \newcommand{\mcmcRMS}{0.46}
 
+\newcommand{\dfmcomment}[1]{{\color{red}#1}}
+
 \begin{document}
 
 \title{Inferring probabilistic stellar rotation periods using Gaussian
@@ -54,18 +57,19 @@ processes}
    Ruth Angus\altaffilmark{\columbia},
    Timothy Morton\altaffilmark{\princeton},
    Suzanne Aigrain\altaffilmark{\oxford},
-   Daniel Foreman-Mackey\altaffilmark{\uw}
+   Daniel Foreman-Mackey\altaffilmark{\uw,\sagan}
    \& Vinesh Rajpaul\altaffilmark{\oxford}
 }
 
 \altaffiltext{\columbia}{Simons Fellow, Department of Astronomy, Columbia
 University, NY, NY, RuthAngus@gmail.com}
-\altaffiltext{\oxford}{Subdepartment of Astrophysics, University of Oxford,
-UK}
-\altaffiltext{\uw}{Department of Astronomy, University of Washington, Seattle,
-WA}
 \altaffiltext{\princeton}{Department of Astrophysical Sciences, Princeton
 University,  Princeton, NJ}
+\altaffiltext{\oxford}{Subdepartment of Astrophysics, University of Oxford,
+UK}
+\altaffiltext{\sagan}{Sagan Fellow}
+\altaffiltext{\uw}{Department of Astronomy, University of Washington, Seattle,
+WA}
 
 \begin{abstract}
 The light curves of spotted, rotating stars often vary in a non-sinusoidal and
@@ -82,9 +86,9 @@ Using this highly flexible model,
 we are able to sample from the posterior Probability Density Function
 (PDF) of the periodic parameter, marginalising over the other kernel hyperparameters
 using a Markov Chain Monte Carlo approach.
-To test this method's effectiveness, we infer rotation periods from 
-\naigrain\ simulated stellar light curves, demonstrating that our results 
-    are more accurate than both a sine-fitting periodogram and an 
+To test this method's effectiveness, we infer rotation periods from
+\naigrain\ simulated stellar light curves, demonstrating that our results
+    are more accurate than both a sine-fitting periodogram and an
     AutoCorrelation Function (ACF) method.
 We also demonstrate that it works effectively on real data, by
 inferring rotation periods for \nkois\ \Kepler\ stars.
@@ -92,6 +96,8 @@ Because this method delivers posteriors PDFs,
 it will enable other studies involving stellar rotation,
 such as inferring stellar
 ages or stellar obliquities in exoplanet systems, or characterising star-planet interactions.
+\dfmcomment{Why do posteriors ``enable'' other studies? Hierarchical
+    inference? This could include more of an argument here.}
 % Thehe ACF method is not applicable to unevenly spaced data,
 % therefore it is inappropriate for the ~$10^7$ stellar light curves expected
 % to be produced by \LSST\ unlike the GP method.
@@ -109,9 +115,9 @@ rotate in and out of view.
 Complicated surface spot patterns produce non-sinusoidal variations,
 and the finite lifetimes of these active regions and
 differential rotation on the stellar surface produce quasi-periodicity.
-A strictly periodic sinusoid therefore does not well describe 
+A strictly periodic sinusoid therefore does not well describe
 rotationally modulated stellar light curves.
-A physically realistic model of the stellar surface 
+A physically realistic model of the stellar surface
 would ideally perfectly capture the complexity of shapes
 within stellar light curves as well as the quasi-periodic nature, allowing for
 extremely precise probabilistic period recovery when conditioned on the data.
@@ -125,32 +131,32 @@ Considering that stars may have hundreds of spots, the number
 of free parameters in such a model quickly becomes unwieldy, especially to explore
 its posterior probability distribution function (PDF).
 Simplified spot models, such as the one described in \citet{Lanza2014} where
-only two spots are modelled, have produced successful results; however, such 
-relatively inflexible models sacrifice precision. 
+only two spots are modelled, have produced successful results; however, such
+relatively inflexible models sacrifice precision.
 
 Standard methods to measure rotation periods include detecting
 peaks in a Lomb-Scargle \citep{Lomb1976, Scargle1982} (LS) periodogram
 \citep[e.g.][]{Reinhold2013}, Auto-Correlation Functions (ACFs),
 \citep{Mcquillan2013} and wavelet transforms \citep{Garcia2014}.
 The precisions of the LS periodogram and wavelet methods are limited by the
-suitability of the model choice: a sinusoid for the LS periodogram, 
+suitability of the model choice: a sinusoid for the LS periodogram,
 and a choice of mother wavelet, assumed to desribe the data
-over a range of transpositions \citep[see, \eg][]{Carter2010}, 
+over a range of transpositions \citep[see, \eg][]{Carter2010},
 for the wavelet method.
 In contrast, the ACF method is much better suited to signals that are
 non-sinusoidal.
-In fact, as long as the signal is approximately periodic the ACF will 
+In fact, as long as the signal is approximately periodic the ACF will
 display a peak at the rotation period, no matter its precise shape.
 A drawback of the ACF method, however, is that it requires data to be
 evenly-spaced\footnote{\citet{Edelson1988} describe a method for computing
 ACFs for unevenly-spaced data.}, which is not exactly the case with \Kepler\
 light curves (although in many cases it can be approximated as uniformly
-sampled) and not nearly the case for most ground-based measurements, such 
+sampled) and not nearly the case for most ground-based measurements, such
 as the future Large Synoptic Survey Telescope (\LSST).
-An ACF is also an operation performed on the data rather than a generative 
+An ACF is also an operation performed on the data rather than a generative
 model of the data, and so is not inherently probabilistic.
-Therefore, there is no justified way to estimate the uncertainty on an ACF
-rotation period measurement.
+This means that the effects of the observational uncertainties cannot be
+formally propagated to constraints on the rotation period.
 % Many rotation periods in the literature have been inferred by measuring the
 % position of the first peak in an ACF, however this approach can be dangerous.
 % The exponential decay in correlation can shift the peak position short-wards
@@ -160,49 +166,52 @@ rotation period measurement.
 In this work, we introduce an {\it effective} model for rotationally
 modulated stellar light curves
 which captures the salient behaviour but is not
-physically motivated---although some parameters may indeed be 
+physically motivated---although some parameters may indeed be
 {\it interpreted} as physical ones.
-An ideal effective model should have a small number of non-degenerate parameters 
+An ideal effective model should have a small number of non-degenerate parameters
 and be flexible enough to perfectly capture non-sinusoidal and QP behaviour.
-A Gaussian process (GP) model fulfills these requirements. We thus use a GP 
-as the generative model at the core of a method to probabilistically 
-infer accurate and precise stellar rotation periods.  This enables us to 
-estimate the posterior PDF of the rotation period, thereby producing a 
+A Gaussian process (GP) model fulfills these requirements. We thus use a GP
+as the generative model at the core of a method to probabilistically
+infer accurate and precise stellar rotation periods.  This enables us to
+estimate the posterior PDF of the rotation period, thereby producing a
 justified estimate of its uncertainty while simultaneously marginalizing over
 parameters which model correlated noise.
 
 GPs are commonly used in the machine learning community and increasingly
 in other scientific fields such as biology and geophysics.
-More recently, GPs have been used in the astronomy literature \citep[see
-\eg][]{Gibson2012, Haywood2014, Haywood2015, Evans2015, Rajpaul2015,
-Rajpaul2016, Aigrain2016}.
+More recently, GPs have been used in the astronomy \dfmcomment{(this should
+probably say something more specific because GPs have been used in other parts
+of astronomy for decades)} literature \citep[see
+\eg][]{Gibson2012, Haywood2014, Dawson2014, Barclay2015, Haywood2015,
+Evans2015, Rajpaul2015, Rajpaul2016, Aigrain2016}.
 They are useful in regression problems involving any stochastic process,
 specifically when the probability distribution for the process is a
 multi-variate Gaussian.
 If the probability of obtaining a dataset is a Gaussian in $N$ dimensions,
-where $N$ is the number of data points, a GP can describe that dataset. 
+where $N$ is the number of data points, a GP can describe that dataset.
 An in-depth introduction to Gaussian processes is provided by
 \citet{Rasmussen2005}.
 
-GP models parameterise the covariance between data points by means of a kernel
-function that defines the form of the covariance matrix.
-As a qualitatively demonstration, we present the time-series 
-in Figure \ref{fig:GP_example}: 
+GP models parameterise the covariance between data points by means of a
+parametric kernel function that models the autocorrelation behaviour of the
+signal and defines the form of the covariance matrix.
+As a qualitatively demonstration, we present the time-series
+in Figure \ref{fig:GP_example}:
 the \kepler\ light curve of KIC \kepexample, a relatively active star that
-rotates once every $\sim$ 4 days, with stochastic variability typical of 
+rotates once every $\sim$ 4 days, with stochastic variability typical of
 \kepler\ FGK stars.
 Clearly, data points in this light curve are correlated.
 Points close together in time are tightly correlated, and points more
 widely separated are loosely correlated.
-A GP models the way in which this correlation varies with the separation between 
-data points; that is, it models not the data directly but rather the {\it 
+A GP models the way in which this correlation varies with the separation between
+data points; that is, it models not the data directly but rather the {\it
 covariance structure}.
 This lends GPs their flexibility---they can model any time
 series with a similar covariance structure.
 In addition, a very simple function can usually capture the covariance
 structure of a light curve, whereas modelling the time series itself
 might require much more complexity.
-Figure \ref{fig:GP_example} demonstrates how a GP model fits the light curve of 
+Figure \ref{fig:GP_example} demonstrates how a GP model fits the light curve of
 KIC \kepexample.
 % Both provide adequate fits to the data, however only the periodic kernel
 % function, `QP' is a useful model because it has a periodic parameter.
@@ -210,7 +219,7 @@ KIC \kepexample.
 
 A range of kernel functions can describe stellar variability.
 For example, the simplest and most commonly used kernel function, the `Squared
-Exponential' (SE), defined as follows, adequately fits the 
+Exponential' (SE), defined as follows, adequately fits the
 KIC \kepexample\ light curve:
 \begin{equation}
 k_{i,j} = A \exp \left(-\frac{(x_i - x_j)^2}{2l^2} \right).
@@ -223,18 +232,19 @@ just two parameters, $A$ and $l$.
 If $l$ is large, two data points far apart in $x$ will be tightly correlated,
 and if small they will be loosely correlated.
 Another property of the SE kernel function is that it produces functions that
-are infinitely differentiable, making it possible to model a data set 
+are infinitely differentiable, making it possible to model a data set
 and its derivatives simultaneously.
 % \citep[see \eg][]{Rajpaul2015}
 
-However, The SE kernel function does not well describe the covariance 
-in stellar light curves, nor is it {\it useful} for the problem of 
+However, The SE kernel function does not well describe the covariance
+in stellar light curves, nor is it {\it useful} for the problem of
 rotation period inference because it does not capture periodic behaviour.
 Inferring rotation periods thus requires a periodic kernel
 function.  For this reason, we use the `Quasi-Periodic' kernel, defined as
+\citep{Rasmussen2005}
 \begin{equation}
-k_{i,j} = A \exp \left(-\frac{(x_i - x_j)^2}{2l^2} -
-\Gamma^2 \sin^2(\frac{2\pi}{P}) \right).
+k_{i,j} = A \exp \left[-\frac{(x_i - x_j)^2}{2l^2} -
+\Gamma^2 \sin^2\left(\frac{2\pi}{P}\right) \right].
 \end{equation}
 \label{eq:QP}
 It is the product of the SE kernel function, which describes the overall
@@ -249,20 +259,22 @@ If $\Gamma$ is large, points separated by one period are tightly
 correlated, and points separated by slightly more or less are still highly
 correlated, although less so.
 This kernel function allows two data points that are separated in time by one
-rotation period to be tightly correlated, while also allowing 
+rotation period to be tightly correlated, while also allowing
 points separated by half a period to be weakly correlated.
 We also use an extra parameter $\sigma$ which is an additional white noise
 term added to the diagonal elements of the covariance matrix.
-This represents the fraction by which the observational uncertainties have been
-underestimated --- if the uncertainties reported on the data are too small,
-it will be non-zero.
-In practice, this parameter should always be non-zero when performing
-GP regression, because the covariance matrix must be positive definite and  
-slight deviations from positive definiteness can arise due to most 
-solvers using approximate, rather than exact, matrix inversion.
-Including a small amount of extra variance in the model ensures enough
-flexibility for matrix inversion algorithms to not run into such numerical
-issues.  We use this QP kernel function to produce the GP model 
+This can be interpreted to represent underestimation of observational
+uncertainties~---~if the uncertainties reported on the data are too small, it
+will be non-zero~---~or it can capture any remaining ``jitter'' or residuals
+that are not captured by the effective GP model.
+%In practice, this parameter should always be non-zero when performing
+%GP regression, because the covariance matrix must be positive definite and
+%slight deviations from positive definiteness can arise due to most
+%solvers using approximate, rather than exact, matrix inversion.
+%Including a small amount of extra variance in the model ensures enough
+%flexibility for matrix inversion algorithms to not run into such numerical
+%issues.
+We use this QP kernel function to produce the GP model
 that fits the \Kepler\ light curve in in Figure \ref{fig:GP_example}.
 
 To infer a stellar rotation period $P$ from a light curve, we fit this QP-kernel
@@ -270,7 +282,7 @@ GP model to the data.  As with any model-fitting exercise, the likelihood
 of the model could be maximized to find the maximum-likelihood value for $P$.
 In this study, however, we explore the full posterior PDFs using a Markov
 Chain Monte Carlo (MCMC) procedure.  While
-this approach comes at a computational cost, such posterior exploration 
+this approach comes at a computational cost, such posterior exploration
 importantly provides a justified uncertainty estimate.
 
 \begin{figure}
@@ -718,7 +730,8 @@ additional white noise term added to the diagonal elements of the covariance
 matrix. It is the fraction by which the observational uncertainties have been
 underestimated. If the uncertainties reported on the data are too small, this
 parameter will be non-zero.
-    The green line in the period panel shows the injected period.}
+    The green line in the period panel shows the injected period.
+    This figure was made using \texttt{corner.py} \citep{Corner}.}
 \label{fig:gp_posteriors}
 \end{center}
 \end{figure*}
