--- a/documents/ms.tex
+++ b/documents/ms.tex
@@ -295,16 +295,16 @@ we discuss the results in \textsection \ref{sec:discussion}.
 \section{Simulated light curves}
 \label{sec:simulations}
 
-In order to test the GP method we attempted to the measure rotation periods of
-a set of simulated light curves.
-We used \naigrain\ light curves generated for the \citet{Aigrain2015}
+In order to test our rotation period recovery method and compare it to
+other standard procedures, we use a set of simulated light curves: namely,
+\naigrain\ light curves generated for the \citet{Aigrain2015}
 `hare and hounds' rotation period recovery experiment.
-These light curves were simulated by placing dark, circular spots with slowly
-evolving size, on the surface of bright, rotating spheres, ignoring
+These light curves result from placing dark, circular spots with slowly
+evolving size on the surface of bright, rotating spheres, ignoring
 limb-darkening effects.
-\citet{Aigrain2015} simulated one thousand light curves in order to test the
+\citet{Aigrain2015} simulated one thousand light curves to test the
 ability of participating teams to recover both the stellar rotation periods
-and the rotational shear: the amplitude of surface differential rotation.
+and the rotational shear (the amplitude of surface differential rotation).
 % Since we are not interested in recovering differential rotation we only used
 % those light curves simulated {\it without} differential rotation, of which
 % there are \naigraincurves.
